<resources>
    <string name="app_name">Adroid Application</string>
    <string name="enter_name">enter name</string>
    <string name="info">Info</string>
    <string name="cities">Cities</string>
    <string name="movies">Movies</string>
    <string name="parks">Parks</string>
    <string name="traffic">Traffic</string>
    <string name="music">Music</string>
    <string name="food">Food</string>
</resources>